fixed text overflow issue

--- a/public/styles/queries.css
+++ b/public/styles/queries.css
@@ -9,9 +9,9 @@ Instead, 1rem = 1em = 16px */
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .country-text {
+  /* .country-text {
     max-width: 100%;
-  }
+  } */
 
   .country-info-details {
     grid-template-columns: 1fr;
